== 2.3.1 ==
Release date: March 29, 2021
* Fixed: Flip Box - Link option was not working in zoom out effect
* Fixed: Posts - Dynamic tag was not working for Read More Button text
* Added: Posts - Option to open read more button in new tab
* Added: Posts - Read More Button Icon Spacing option
* Enhancement: Posts - Updated Read More Button Icon control

== 2.3.0 ==
Release date: March 22, 2021
* New: Random Image widget
* Fixed: Info Box - Responsive Icon Position control was not working
* Fixed: Display Conditions - Day of the Week option was not working for Sunday
* Fixed: Gravity forms was enqueuing all scripts and styles on frontend

== 2.2.5 ==
Release date: February 23, 2021
* Added: Image Hotspots - Z-index option for tooltips
* Enhancement: Pricing Table - Added pointer cursor if click trigger is used for tooltip
* Fixed: Pricing Table - If tooltip content is left blank it was showing content from previous item's tooltip content
* Added: Pricing Table - Settings to change color and size for tooltip icon
* Fixed: Pricing Table - Tooltip icon was showing even if there was no tooltip content

== 2.2.4 ==
Release date: February 10, 2021
* Fixed: Instagram Feed – Added compatibility with new Instagram API changes

== 2.2.3 ==
Release date: February 3, 2021
* Fixed: Compatibility with Elementor 3.0
* Fixed: Team Member, Team Member Carousel - Added option to show content over image
* Fixed: Display Conditions - Timezone issue
* Added: Display Conditions - Post term, Terms archive, Current User, Day of Week, Current Date and Time conditions
* Enhancement: Advanced Accordion - Updated default styling
* Added: Advanced Accordion - Hover and active colors for Items
* Added: Advanced Accordion - Title bottom spacing option

== 2.2.2 ==
Release date: December 10, 2020
* Fixed: Instagram Feed - Masonry layout

== 2.2.1 ==
Release date: November 2, 2020
* Fixed: Instagram Feed - Feed was not working

== 2.2.0 ==
Release date: October 27, 2020