@@ -1,10 +1,12 @@
 == 2.3.1 ==
 Release date: March 29, 2021
 * Fixed: Flip Box - Link option was not working in zoom out effect
+* Fixed: Info Box Carousel, Logo Carousel - Fade, Cube and Flip effects
 * Fixed: Posts - Dynamic tag was not working for Read More Button text
 * Added: Posts - Option to open read more button in new tab
 * Added: Posts - Read More Button Icon Spacing option
 * Enhancement: Posts - Updated Read More Button Icon control
+* Enhancement: Added support for Elementor Improved Assets Loading feature
 
 == 2.3.0 ==
 Release date: March 22, 2021
